endre tekst: "STARTER SPILLET"

--- a/pokemon_battle.html
+++ b/pokemon_battle.html
@@ -516,7 +516,7 @@
         }
       }
 
-      //STARTER SPILLET
+      //Aktiverer angrep med "knapp"
       const moveBtn = document.querySelectorAll(".skill");
 
       function generateRandomDamage(min, max) {
