Fjernet unødvendig "game over"

--- a/pokemon_battle.html
+++ b/pokemon_battle.html
@@ -584,9 +584,6 @@
             if (enemy.alive && !myPokemon.alive) {
               alert("Du er blitt beseiret!");
             }
-          } //sjekker om noen er i live, dersom en eller begge er død skal "GAME OVER" komme
-          if (!enemy.alive || !myPokemon.alive) {
-            alert("GAME OVER");
           }
         });
 
@@ -622,6 +619,13 @@
       //Definerer hva som skal skje når fienden angriper
       async function counterAttack() {
         try {
+          if (enemy.alive) {
+            const damage = generateRandomDamage(5, 15);
+            myPokemon.currentHP -= damage;
+            alert(
+              `Fienden angriper og forårsaker ${damage} HP skade. ${myPokemon.name} har nå ${myPokemon.currentHP} igjen`
+            );
+          }
           //Hvis fienden er beseiret skal bildet forsvinne og alert oppstå
           if (enemy.currentHP <= 0) {
             enemy.alive = false;
@@ -629,12 +633,6 @@
             const enemyImage = document.querySelector(".enemy-container");
             enemyImage.remove();
           }
-          const damage = generateRandomDamage(5, 15);
-          myPokemon.currentHP -= damage;
-
-          alert(
-            `Fienden angriper og forårsaker ${damage} HP skade. ${myPokemon.name} har nå ${myPokemon.currentHP} igjen`
-          );
 
           document.querySelector(
             "#my-pokemon-health-txt"
