endret font i angrepskonsollen

--- a/pokemon_battle.html
+++ b/pokemon_battle.html
@@ -77,7 +77,10 @@
         </div>
       </div>
       <!--Container med min pokemons attacks -->
-      <div class="my-attack-container">
+      <div
+        style="font-size: 20px; font-family: Lucida Sans"
+        class="my-attack-container"
+      >
         <ul id="skills-list">
           <li class="skill">Skill 1</li>
           <li class="skill">Skill 2</li>
